# rp2040-freertos-template

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  flash.sh
src/: CMakeLists.txt  blinky.c  main.c  simple_i2c.c
src/includes/Flash/: Flash.c  Flash.h
src/includes/Servo/: Servo.c  Servo.h
src/tasks/env_control/: env_control.c  env_control.h
src/tasks/sense/: sense.c  sense.h
src/tasks/turn/: turn.c  turn.h
